Archive2/80/62d4ac996757d8/output
main.cpp:1:1: error: 'unordered_set' does not name a type
 unordered_set<signed long long> getValues(unordered_set<signed long long> contents, char buffer[102400])
 ^
